<resources>
    <string name="app_name">FirebaseAuthDemo</string>
    <string name="image">image</string>
    <string name="login_screen">LOGIN SCREEN</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register_screen">REGISTER SCREEN</string>
    <string name="logout">Logout</string>
    <string name="you_are_logged_in_successfully">You are logged in successfully.</string>
    <string name="emailId_login">Email Id</string>
</resources>